<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--
        <item
            android:id="@+id/nav_camera"
            android:title="temp" />
        <item
            android:id="@+id/nav_gallery"
            android:title="temp" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="temp" />
        <item
            android:id="@+id/nav_manage"
            android:title="temp" />
            -->
        <item
            android:id="@+id/frag1"
            android:title="@string/Home" />
        <item
            android:id="@+id/frag2"
            android:title="@string/W" />
        <item
            android:id="@+id/frag3"
            android:title="@string/OR" />
        <item
            android:id="@+id/frag4"
            android:title="@string/IF" />
        <item
            android:id="@+id/frag5"
            android:title="@string/GAME" />
    </group>

    <!--
    <item android:title="Fragments">
        <menu>
            <item
                android:id="@+id/frag1"
                android:title="Fragment 1" />
            <item
                android:id="@+id/frag2"
                android:title="Fragment 2" />
        </menu>
    </item>
-->
</menu>
